# OpenMS

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG_PARAMS  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestConfig.cmake  FASTAFile_test_159.tmp  LICENSE  LICENSE.md  License.NetCDF.txt  License.gpl-2.0.txt  License.lgpl-2.1.txt  License.libSVM.txt  License.txt  OpenMSBuildSettings.cmake  OpenMSCPack.cmake  OpenMSLibraryDepends.cmake  OpenMSPackageResourceReadme.txt  OpenMSUse.cmake  PULL_REQUEST_TEMPLATE.md  README  README.md  azure-pipelines.yml  codeship-services.yml  codeship-steps.yml  conanfile.py  conanfile.txt  create_sim_data.sh  dependabot.yml  elephant.txt  generate_source_files.bash  (+12 more)
doc/: CMakeLists.txt  Doxyfile  Doxyfile_internal  Makefile  Tidy  index.html  superhirnclasses.pptx
doc/OpenMS_tutorial/: Doxyfile  Doxyfile.in  OpenMS_Tutorial.doxygen  Tutorial.doxygen  developer_Tutorial.doxygen  refman_overwrite.tex  refman_overwrite.tex.in
doc/TOPP_tutorial/: Doxyfile  Doxyfile.in  TOPPAS.doxygen  TOPPView_Tools_Tutorial.doxygen  TOPPView_Tutorial.doxygen  TOPPView_calling_topp.doxygen  TOPPView_interface.doxygen  TOPP_Tutorial.doxygen  TOPP_advanced.doxygen  TOPP_concepts.doxygen  TOPP_scripting.doxygen  refman_overwrite.tex  refman_overwrite.tex.in
doc/code_examples/: CMakeLists.txt  ExamplePlugin.py  FragmentIndex3D_test.cpp  FragmentIndex_tests.cpp  TagGenerator_tests.cpp  Tutorial_AASequence.C  Tutorial_AASequence.cpp  Tutorial_Clustering.C  Tutorial_Clustering.cpp  Tutorial_ComparatorUtils.cpp  Tutorial_DPosition.C  Tutorial_DPosition.cpp  Tutorial_DRange.C  Tutorial_DRange.cpp  Tutorial_Element.C  Tutorial_Element.cpp  Tutorial_EmpiricalFormula.cpp  Tutorial_Enzyme.cpp  Tutorial_FeatureFinder.cpp  Tutorial_FeatureMap.C  Tutorial_FeatureMap.cpp  Tutorial_FileIO.C  Tutorial_FileIO.cpp  Tutorial_FileIO_Consumer.C  Tutorial_FileIO_Consumer.cpp  Tutorial_FileIO_mzML.C  Tutorial_FileIO_mzML.cpp  Tutorial_Final.cpp  Tutorial_GUI_ListEditor.cpp  Tutorial_GUI_ParamEditor.C  Tutorial_GUI_ParamEditor.cpp  Tutorial_GUI_Plot1D.cpp  Tutorial_GUI_Spectrum1D.C  Tutorial_GUI_Spectrum1D.cpp  Tutorial_GaussFilter.cpp  Tutorial_IdentificationClasses.cpp  Tutorial_InputParam.cpp  Tutorial_InputRead.cpp  Tutorial_InternalCalibration.C  Tutorial_InternalCalibration.cpp  (+40 more)
doc/common/: header.txt  styles.css
doc/doxygen/: Doxyfile.in  Doxyfile_dot  Doxyfile_dot.in  Doxyfile_internal  Doxyfile_internal.in  Doxyfile_noclass  Doxyfile_noclass.in  Doxyfile_xml.in  dot
doc/html/: Tidy
doc/images/: Dilatation.eps  Erosion.eps
doc/install/: install.html  install_without_contrib.html  makefile.html
doc/misc/: Coding.doxygen  FAQ.html  InternalFAQ.doxygen  Makefile  TOPP.html  coding_style.tex  welcome.html
doc/tutorial/: Doxyfile  FeatureFinder.ygf  Kernel.ygf  Kernel_main.ygf  MapAlignment.ygf  MapMapping.ygf  MetaData.ygf  MetaInfo.ygf  Tutorial.doxygen  refman_overwrite.tex  tutorial.html
doc/tutorial_old/: FeatureFinder.ygf  tutorial.html
openms/: CMakeLists.txt
openms_gui/: CMakeLists.txt
pyOpenMS/: CMakeLists.txt  ClassesToWrap.txt  License.txt  MANIFEST.in  README  README.rst  README_WRAPPING_NEW_CLASSES  create_cpp_extension.py  doCythonCompileOnly.py  env.py  pyopenms.cmake  run_memleaks.py  run_nose.py  run_pipeline.sh  run_valgrind.sh  setup.py  version.py
pyOpenMS/addons/: Chromatogram.pyx  ComplementMarker.pyx  ConsensusMap.pyx  ConvexHull2D.pyx  DIAScoring.pyx  DPosition.pyx  EmgFitter1D.pyx  FeatureMap.pyx  IDRipper.pyx  IndexedMzMLDecoder.pyx  InspectInfile.pyx  Interfaces.pyx  IsobaricIsotopeCorrector.pyx  IsotopeMarker.pyx  MSChromatogram.pyx  MSExperiment.pyx  MSQuantifications.pyx  MSSpectrum.pyx  Map.pyx  MzMLFile.pyx  OSSpectrum.pyx  OpenSwathDataAccessHelper.pyx  PILISIdentification.pyx  Param.pyx  PeakTypeEstimator.pyx  QcMLFile.pyx  SILACAnalyzer.pyx  SILACClustering.pyx  SequestOutfile.pyx  SignalToNoiseEstimatorChrom.pyx  Spectrum.pyx  SpectrumAccessOpenMS.pyx  SpectrumAccessOpenMSCached.pyx  SpectrumAlignment.pyx  SpectrumAlignmentScore.pyx  _Interfaces_Chromatogram.pyx  default_cimports.pyx  streampos.pyx
pyOpenMS/converters/: __init__.py  special_autowrap_conversionproviders.py
pyOpenMS/cython_debug/: interpreter
pyOpenMS/doc/: Manual.tex  create_manual.py
pyOpenMS/extra_includes/: python_ms_data_consumer.hpp
pyOpenMS/pxds/: AAIndex.pxd  AASequence.pxd  AScore.pxd  AccurateMassSearchEngine.pxd  AccurateMassSearchResult.pxd  Adduct.pxd  Attachment.pxd  AverageLinkage.pxd  Base64.pxd  BaseFeature.pxd  BaseGroupFinder.pxd  BernNorm.pxd  BinnedSpectrum.pxd  CVMappingRule.pxd  CVMappingTerm.pxd  CVMappings.pxd  CVReference.pxd  CVTerm.pxd  CVTermList.pxd  CachedmzML.pxd  ChargePair.pxd  ChargedIndexSet.pxd  ChromatogramExtractor.pxd  ChromatogramExtractorAlgorithm.pxd  ChromatogramPeak.pxd  ChromatogramSettings.pxd  ChromatogramTools.pxd  CompNovoIdentificationCID.pxd  CompNovoIonScoring.pxd  CompNovoIonScoringCID.pxd  ComplementMarker.pxd  Compomer.pxd  ConfidenceScoring.pxd  ConsensusFeature.pxd  ConsensusID.pxd  ConsensusMap.pxd  ConsensusMapNormalizerAlgorithmQuantile.pxd  ConsensusMapNormalizerAlgorithmThreshold.pxd  ConsensusXMLFile.pxd  ContactPerson.pxd  (+289 more)
pyOpenMS/pyTOPP/: FeatureFinderCentroided.py  FeatureLinkerUnlabeledQT.py  FileConverter.py  IDMapper.py  MRMMapper.py  MapAlignerPoseClustering.py  OpenSwathChromatogramExtractor.py  OpenSwathFeatureXMLToTSV.py  OpenSwathRTNormalizer.py  PeakPickerHiRes.py  SILACAnalyzer.py  common.py
pyOpenMS/pyopenms/: __init__.py  docompile.py  run_cython.sh  sysinfo.py  version.py
pyOpenMS/tests/: temp_test.ini  test.ini  test.mzData  test.mzML  test1.mzData
source/: COPYRIGHT  aclocal.m4  configure  configure.ac
source/ANALYSIS/: Makefile
source/APPLICATIONS/: Applications.doxygen  ConsoleUtils.C  INIFileEditorWindow.C  INIUpdater.C  Makefile  Makefile_SUBDIRS  ParameterInformation.C  TOPPASBase.C  TOPPBase.C  TOPPBase2.C  TOPPViewBase.C  ToolHandler.C  (+1 more)
(+15880 files in other folders)
